user list created; user form created for creating, updating and deleting users; responsive layout created; success and error page created/updated; separated Model.set in add and update; added Model.remove

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,7 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<div class="alert alert-danger" role="alert"><h3>{{message}}</h3></div>
+{{#with error}}
+  <p class="bg-danger">
+    <h2>{{error.status}}</h2>
+    <pre>{{error.stack}}</pre>
+  </p>
+{{/with}}
