--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -18,22 +18,29 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/users">Users</a></li>
-            <li><a href="/accounts">Accounts</a></li>
-            <li><a href="/transactions">Transactions</a></li>
-            <li><a href="/reports">Reports</a></li>
+            <li class="{{#equalsClass project.active 'users' 'active'}}{{/equalsClass}}">
+              <a href="/users">Users</a></li>
+            <li class="{{#equalsClass project.active 'accounts' 'active'}}{{/equalsClass}}">
+              <a href="/accounts">Accounts</a></li>
+            <li class="{{#equalsClass project.active 'transactions' 'active'}}{{/equalsClass}}">
+              <a href="/transactions">Transactions</a></li>
+            <li class="{{#equalsClass project.active 'reports' 'active'}}{{/equalsClass}}">
+              <a href="/reports">Reports</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
+        <!--/.nav-collapse -->
       </div>
     </nav>
 
-    <div class="container">
-      <div class="starter-template">
-        <h1>{{title}}</h1>
-        <p class="lead">{{{body}}}</p>
-      </div>
-    </div>
 
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 main">
+          <h1 class="page-header">{{title}}</h1>
+        </div>
+      </div>
+      {{{body}}}
+    </div>
     {{>footer}}
   </body>
 </html>
